 - lt:uTP performance, don't send redundant deferred ACKs
 - lt:fix wanted_done/done accounting when force-rechecking
 - lt:expose userdata via torrent_handle (back-port from 2.0)
 - lt:fix renaming of filenames that are too long for the filesystem
 - lt:made UPnP and LSD code avoid using select_reactor (to work around an issue on windows in boost.asio < 1.80)

FrostWire 2.6.7 build 718 - APR/29/2023
 - Improved YT search for spanish, french, german, italian
 - python:websockets-11.0.2
 - androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1
 - removed androidx.lifecycle:lifecycle-viewmodel
 - com.google.firebase:firebase-crashlytics-gradle:2.9.5

FrostWire 2.6.6 build 717 - MAR/31/2023
 - PLUS-ONLY: New video search source
 - SoundCloud search fixed

FrostWire 2.6.5 build 716 - MAR/17/2023
 - Filters out irrelevant search results from EZTV search performer
 - Removed all landscape layouts, app works only in vertical mode now
 - python:yt_dlp-2023.3.4
 - androidx.annotation:annotation:1.6.0
 - Fixes weird crash getting fastest TPB mirror
 - dev:com.android.tools.build:gradle:7.4.0

FrostWire 2.6.4 build 713 - MAR/09/2023
 - 100x faster search results
 - Targets Android 13 (targetSdkVersion 33)
 - SearchManager optimizations, much faster search results
 - New BTDigg search engine
 - Less aggressive okhttpclient thread pools to not exhaust http connections
 - Zooqle search removed, service defunct
 - python:yt_dlp-2023.2.17
 - dev:com.google.firebase:firebase-crashlytics-gradle:2.9.4
 - com.google.gms:google-services:4.3.15
 - com.google.android.material:material:1.8.0
 - androidx.exifinterface:exifinterface:1.3.6
 - androidx.browser:browser:1.5.0
 - com.applovin:applovin-sdk:11.7.1
 - com.applovin.mediation:unityads-adapter:4.6.0.0

FrostWire 2.6.3 build 711 - JAN/31/2023
 - com.chaquo.python:gradle:14.0.2
 - python:yt_dlp-2023.1.6
 - python:Brotli-1.0.7
 - python: pycryptodomex-3.9.4
 - python: websockets-10.4
 - com.google.android.material:material:1.7.0